# tree-sitter-br

./: .gitignore  CLAUDE.md  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  Readme.md  binding.gyp  build-wasm.sh  completions.ps1  example.brs  go.mod  grammar-lite.js  grammar.js  gulpfile.js  index.js  index.js.map  index.ts  log.txt  mat_numeric_array_expression_performance_analysis.md  package-lock.json  package.json  parser.exp  parser.lib  pyproject.toml  rebuild-native.js  screenio.brs  setup.py  shippera.brs  simple-test.brs  temp.brs  test.brs  test.js  test.js.map  test.ts  tree-sitter-br.wasm  tree-sitter.json  tsconfig.json
.github/workflows/: ci.yml  prebuild.yml
bindings/c/: tree-sitter-br.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  binding_test.js  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_br/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterBr/: br.h
bindings/swift/TreeSitterBrTests/: TreeSitterBrTests.swift
queries/: function-def.scm  highlights.scm
src/: grammar.json  node-types.json  output.wasm  parser.c  scanner.c
test/corpus/: def.txt  dim.txt  expression.txt  expressions.txt  form.txt  keywords.txt  print.txt  statements.txt
