[package]
name = "tree-sitter-br"
description = "Business Rules! Language Parser"
version = "0.1.0"
authors = ["Chris Shields <christopherroyshields@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "br"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/christopherroyshields/tree-sitter-br"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.24.7"
